k8s/ingress_05/jackson-ingress-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jackson-chen-nginx-jackson-backend
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  selector:
    name: jackson-chen-nginx-ingress
